# swc-plugin-allow-importing-ts-extensions

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: pull_request.yml  release.yml
src/: lib.rs  plugin.rs
tests/: fixture.rs
tests/fixture/base-url/: .swcrc  input.ts  package.json  tsconfig.json
tests/fixture/jsx/: .swcrc  input.tsx  output.js  package.json
tests/fixture/jsx/lib/: App.tsx
tests/fixture/no-preserve-extensions/: .swcrc  input.ts  output.js  package.json
tests/fixture/no-preserve-extensions/lib/: commonjs.cts
tests/fixture/paths/: .swcrc  input.ts  output.js  package.json  tsconfig.json
tests/fixture/preserve-extensions/: .swcrc  output.js  package.json
tests/fixture/preserve-extensions/lib/: module.mts  types.d.ts
tests/fixture/simple/: .swcrc  input.ts  output.js  package.json
tests/fixture/simple/lib/: default.ts
