[package]
name = "allow_importing_ts_extensions"
version = "0.0.0-development"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
swc_core = { version = "0.92.2", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.113.0"
swc_ecma_visit = "0.99.0"
swc_plugin_macro = "0.9.16"

[dev-dependencies]
swc_atoms = "0.6.6"
swc_common = "0.33.22"
swc_ecma_parser = "0.144.0"
swc_ecma_transforms_base = "0.138.0"
swc_ecma_transforms_testing = "0.141.0"
swc_ecma_transforms_typescript = "0.189.0"
swc_ecma_utils = "0.128.0"
testing = "0.35.22"
tracing = { version="0.1", features = ["release_max_level_info"] }
