[package]
name = "allow_importing_ts_extensions"
version = "0.0.0-development"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
swc_core = { version = "0.93.4", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.113.1"
swc_ecma_visit = "0.99.1"
swc_plugin_macro = "0.9.16"

[dev-dependencies]
swc_atoms = "0.6.5"
swc_common = "0.33.26"
swc_ecma_parser = "0.146.1"
swc_ecma_transforms_base = "0.138.1"
swc_ecma_transforms_testing = "0.141.1"
swc_ecma_transforms_typescript = "0.189.1"
swc_ecma_utils = "0.128.1"
testing = "0.35.22"
tracing = { version="0.1", features = ["release_max_level_info"] }
