[package]
name = "allow_importing_ts_extensions"
version = "0.0.0-development"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Optimize for performance, this is default so you don't need to specify it
# opt-level = "z"

# Strip debug symbols
strip = "symbols"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
swc_core = { version = "0.96.0", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.115.0"
swc_ecma_visit = "0.101.0"
swc_plugin_macro = "0.9.16"

[dev-dependencies]
swc_atoms = "0.6.5"
swc_common = "0.34.1"
swc_ecma_parser = "0.146.1"
swc_ecma_transforms_base = "0.140.0"
swc_ecma_transforms_testing = "0.143.0"
swc_ecma_transforms_typescript = "0.191.0"
swc_ecma_utils = "0.130.0"
testing = "0.36.0"
tracing = { version="0.1", features = ["release_max_level_info"] }
